# cradlewise-bridge

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml  requirements.txt
examples/: connect_and_snapshot.py  detect_audio_spikes.py  record_continuously.py  state_polling.py
src/cradlewise_bridge/: __init__.py  audio.py  client.py  janus.py  local.py  recorder.py  rest.py
